--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <style type="text/css">
+      a.no-deco{
+        color: #000000 !important;
+      }
+    </style>
     {% block page_css %}{% endblock %}
      <!-- DataTables -->
     <link href="{% static 'main/css/dataTables.bootstrap.css' %}" rel="stylesheet" type="text/css" />
