--- a/templates/pollingstation_list.html
+++ b/templates/pollingstation_list.html
@@ -8,7 +8,7 @@
             <div class="col-md-12">
                 <div class="box box-primary">
                     <div class="box-header">
-                        <h3 class="box-title"></h3>
+                        <h3 class="box-title">All Polling Station(s)</h3>
                     </div><!-- /.box-header -->
                     <div class="box-body table-responsive">
                     
@@ -16,7 +16,6 @@
                             <thead>
                                 <tr>
                                     <th>#</th>
-                                    <th>LAC</th>
                                     <th>Name</th>
                                     <th>Total Voters</th>
                                     <th>Latitude</th>
@@ -30,7 +29,6 @@
                                 {% for poll in object_list %}
                             	<tr>
                                     <td>{{ poll.unique_id }}</td>
-                                    <td>{{ poll.lac.name }}</td>
                                     <td><a href = "{% url 'PollingStationView' ps_id=poll.id %}" >{{ poll.name }}</a></td>
                                     <td>{{ poll.total_voters }}</td>
                                     <td>{{ poll.latitude }}</td>
