--- a/templates/presidingofficerview.html
+++ b/templates/presidingofficerview.html
@@ -7,7 +7,7 @@
  <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="info-box">
-                <span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>
+                <span class="info-box-icon bg-yellow"><i class="ion ion-android-person"></i></span>
 
                 <div class="info-box-content">
                   <span class="info-box-text">Name</span>
@@ -22,7 +22,7 @@
 
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="info-box">
-                <span class="info-box-icon bg-green"><i class="ion ion-android-done-all"></i></span>
+                <span class="info-box-icon bg-blue"><i class="ion ion-android-phone-portrait"></i></span>
 
                 <div class="info-box-content">
                   <span class="info-box-text">Mobile</span>
@@ -37,7 +37,7 @@
 
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="info-box">
-                <span class="info-box-icon bg-aqua"><i class="ion ion-android-archive"></i></span>
+                <span class="info-box-icon bg-green"><i class="ion ion-log-in"></i></span>
 
                 <div class="info-box-content">
                   <span class="info-box-text">Last Login</span>
@@ -50,7 +50,7 @@
 
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="info-box">
-                <span class="info-box-icon bg-aqua"><i class="ion ion-android-archive"></i></span>
+                <span class="info-box-icon bg-red"><i class="ion ion-log-out"></i></span>
 
                 <div class="info-box-content">
                   <span class="info-box-text">Last Logout</span>
@@ -61,8 +61,9 @@
               <!-- /.info-box -->
             </div>
 </div>
-<div class="row">
-            <div class="col-xs-12">
+
+  <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="box">
                     <div class="box-header">
                         <h3 class="box-title">Presiding Officer Status</h3>
@@ -71,102 +72,77 @@
                         <table id="example1" class="table table-bordered table-striped">
                             <thead>
                                 <tr>
-                                    <th>ID</th>
-                                    <th>Name</th>
+                                    <th>EVM</th>
                                     <th>Polling Station</th>
                                     <th>Vote %age</th>
                                     <th>Received EVM</th>
-                                    <!-- <th>Timestamp</th> -->
                                     <th>Reached Polling Station</th>
-                                    <!-- <th>Timestamp</th> -->
-                                    <th>Sealed EVM</th>
-                                    <!-- <th>Timestamp</th> -->
+                                    <th>Completed Mock Poll</th>
+                                    <th>Poll Started</th>
+                                    <th>Poll Ended</th>
+                                    <th>Reached Strong Room</th>
+                                    <th>Submitted EVM</th>
                                     <th>Received Release</th>
-                                    <!-- <th>Timestamp</th> -->
-                                    <th>Poll Starts</th>
-                                    <!-- <th>Timestamp</th> -->
-                                    <th>Poll Ends</th>
-                                    <!-- <th>Timestamp</th> -->
-                                    <th>Reached DC</th>
-                                    <!-- <th>Timestamp</th> -->
                                 </tr>
                             </thead>
-                           
-                            <tbody>
-                              
-                                <tr>
-                                    <td>{{ presiding_officer.username }}</td>
-                                    <td>{{presiding_officer.full_name}}</td>
-                                    <td>{{presiding_officer.polling_station.name}}</td>
-                                    <td>{% current_vote_percentage presiding_officer.polling_station %}%</td>
-                  {% if po_status.received_evm %}
-                  <td style="text-align : center"> <span class ="glyphicon glyphicon-ok " style = "color:green; vertical-align:middle" ></span><br>{{po_status.received_evm_timestamp}}</td>
-                  {% else %}
-                    <td></td>
-                  {% endif %}
-                  {% if po_status.reached_polling_station %}
-                  <td style="text-align : center"> <span class ="glyphicon glyphicon-ok" style = "color:green" ></span><br>{{po_status.reached_polling_station_timestamp}}</span></td>
-                  {% else %}
-                    <td></td>
-                  {% endif %}
-                  
-                  {% if po_status.sealed_evm %}
-                  <td style="text-align : center"> <span class ="glyphicon glyphicon-ok" style = "color:green" ></span><br>{{po_status.sealed_evm_timestamp}}</td>
-                  {% else %}
-                    <td></td>
-                  {% endif %}
-                  
-                  {% if po_status.received_release %}
-                  <td style="text-align : center"> <span class ="glyphicon glyphicon-ok" style = "color:green" ></span><br>{{po_status.received_release_timestamp}}</td>
-                  {% else %}
-                    <td></td>
-                  {% endif %}
-                  
-                  {% if po_status.poll_starts %}
-                  <td style="text-align : center"> <span class ="glyphicon glyphicon-ok" style = "color:green" ></span><br>{{po_status.poll_starts_timestamp}}</td>
-                  {% else %}
-                    <td></td>
-                  {% endif %}
- 
-                  {% if po_status.poll_ends %}
-                  <td style="text-align : center"> <span class ="glyphicon glyphicon-ok" style = "color:green" ></span><br>{{po_status.poll_ends_timestamp}}</td>
-                  {% else %}
-                    <td></td>
-                  {% endif %}
-                  
-                  {% if po_status.reached_dc %}
-                  <td style="text-align : center"> <span class ="glyphicon glyphicon-ok" style = "color:green" ></span><br>{{po_status.reached_dc_timestamp}}</td>
-                  {% else %}
-                    <td></td>
-                  {% endif %}
-                  
 
-  
-                                </tr>
-                                
-                            </tbody>
-                            <tfoot>
+                            <tbody>
                                 <tr>
-                                    <th>ID</th>
-                                    <th>Name</th>
-                                    <th>Polling Station</th>
-                                    <th>Vote %age</th>
-                                    <th>Received EVM</th>
-                                    <!-- <th>Timestamp</th> -->
-                                    <th>Reached Polling Station</th>
-                                    <!-- <th>Timestamp</th> -->
-                                    <th>Sealed EVM</th>
-                                    <!-- <th>Timestamp</th> -->
-                                    <th>Received Release</th>
-                                    <!-- <th>Timestamp</th> -->
-                                    <th>Poll Starts</th>
-                                    <!-- <th>Timestamp</th> -->
-                                    <th>Poll Ends</th>
-                                    <!-- <th>Timestamp</th> -->
-                                    <th>Reached DC</th>
-                                    <!-- <th>Timestamp</th> -->
+                                    <td>{{presiding_officer.username}}</td>
+                                    <td><a href = "{% url 'PollingStationView' ps_id=presiding_officer.polling_station.id %}" >{{presiding_officer.polling_station.name}}</a></td>
+                                    <td>{% current_vote_percentage presiding_officer.polling_station %}%</td>
+									{% if po_status.received_evm %}
+									<td style="text-align : center"> <span class ="glyphicon glyphicon-ok " style = "color:green; vertical-align:middle" ></span><br>{{po_status.received_evm_timestamp}}</td>
+									{% else %}
+										<td></td>
+									{% endif %}
+									{% if po_status.reached_polling_station %}
+									<td style="text-align : center"> <span class ="glyphicon glyphicon-ok" style = "color:green" ></span><br>{{po_status.reached_polling_station_timestamp}}</span></td>
+									{% else %}
+										<td></td>
+									{% endif %}
+
+
+									{% if po_status.mock_poll_ends %}
+									<td style="text-align : center"> <span class ="glyphicon glyphicon-ok" style = "color:green" ></span><br>{{po_status.mock_poll_ends_timestamp }}</td>
+									{% else %}
+										<td></td>
+									{% endif %}
+
+
+
+									{% if po_status.poll_starts %}
+									<td style="text-align : center"> <span class ="glyphicon glyphicon-ok" style = "color:green" ></span><br>{{po_status.poll_starts_timestamp}}</td>
+									{% else %}
+										<td></td>
+									{% endif %}
+
+									{% if po_status.poll_ends %}
+									<td style="text-align : center"> <span class ="glyphicon glyphicon-ok" style = "color:green" ></span><br>{{po_status.poll_ends_timestamp}}</td>
+									{% else %}
+										<td></td>
+									{% endif %}
+
+
+									{% if po_status.reached_dc %}
+									<td style="text-align : center"> <span class ="glyphicon glyphicon-ok" style = "color:green" ></span><br>{{po_status.reached_dc_timestamp}}</td>
+									{% else %}
+										<td></td>
+									{% endif %}
+
+                                      {% if po_status.sealed_evm %}
+                                      <td style="text-align : center"> <span class ="glyphicon glyphicon-ok" style = "color:green" ></span><br>{{po_status.sealed_evm_timestamp}}</td>
+                                      {% else %}
+                                        <td></td>
+                                      {% endif %}
+
+                                      {% if po_status.received_release %}
+                                      <td style="text-align : center"> <span class ="glyphicon glyphicon-ok" style = "color:green" ></span><br>{{po_status.received_release_timestamp}}</td>
+                                      {% else %}
+                                        <td></td>
+                                      {% endif %}
                                 </tr>
-                            </tfoot>
+                            </tbody>
                         </table>
                     </div><!-- /.box-body -->
                 </div><!-- /.box -->
@@ -178,7 +154,7 @@
         <div class=" col-xs-offset-2 col-xs-8">
                 <div class="box">
                     <div class="box-header">
-                        <h3 class="box-title">Locations of Presiding Officers</h3>
+                        <h3 class="box-title">Location(s) of Presiding Officer</h3>
                     </div><!-- /.box-header -->
                     <div id="map" class="box-body table-responsive" style="height:500px;">
                         
@@ -188,9 +164,6 @@
       </div>
 
 
-
-
-	</div>
 {% endblock %}
 
 {% block page_js %}
