--- a/templates/messages.html
+++ b/templates/messages.html
@@ -28,7 +28,7 @@
                                 {% for s in sos_messages %}
                             	<tr>
                                     <td>{{ s.id }}</td>
-                                    <td><a href = "{% url 'PollingStationView' ps_id=s.polling_station.id %}" >{{ s.polling_station.name }}</a></td>
+                                    <td><a href = "{% url 'PollingStationView' ps_id=s.polling_station.id %}" >{{ s.polling_station.unique_id }}-{{ s.polling_station.name }}</a></td>
                                     <td>
                                         {% if s.solved %}
                                             Solved
