Loggedin numbers not currently Active numbers.

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -28,7 +28,7 @@
                 <span class="info-box-icon bg-green"><i class="ion-android-happy"></i></span>
 
                 <div class="info-box-content">
-                  <span class="info-box-text">Active Presiding Officers</span>
+                  <span class="info-box-text">Active Presiding Officers</span><small>(Logged-in at least once)</small>
                   <span class="info-box-number">{{ active_po }}</span>
                 </div>
                 <!-- /.info-box-content -->
@@ -42,7 +42,7 @@
                 <span class="info-box-icon bg-red"><i class="ion-android-sad"></i></span>
 
                 <div class="info-box-content">
-                  <span class="info-box-text">Inactive Presiding Officers</span>
+                  <span class="info-box-text">Inactive Presiding Officers</span><small>(Never logged-in)</small>
                   <span class="info-box-number">{{ inactive_po }}</span>
                 </div>
                 <!-- /.info-box-content -->
