More quick stats added on dashboard + Pace JS for AJAX + Collapsed sidebars always

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -50,6 +50,33 @@
               <!-- /.info-box -->
             </div>
             </a>
+
+            <div class="col-md-3 col-sm-6 col-xs-12">
+              <div class="info-box">
+                <span class="info-box-icon bg-orange"><i class="ion-android-archive"></i></span>
+
+                <div class="info-box-content">
+                  <span class="info-box-text">Received EVM</span><small>(marked in app)</small>
+                  <span class="info-box-number">{{ received_evm }}</span>
+                </div>
+                <!-- /.info-box-content -->
+              </div>
+              <!-- /.info-box -->
+            </div>
+
+            <div class="col-md-3 col-sm-6 col-xs-12">
+              <div class="info-box">
+                <span class="info-box-icon bg-fuchsia"><i class="ion-paper-airplane"></i></span>
+
+                <div class="info-box-content">
+                  <span class="info-box-text">Reached Polling Station</span><small>(marked in app)</small>
+                  <span class="info-box-number">{{ reached_polling_station }}</span>
+                </div>
+                <!-- /.info-box-content -->
+              </div>
+              <!-- /.info-box -->
+            </div>
+
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="info-box">
                 <span class="info-box-icon bg-aqua"><i class="ion ion-erlenmeyer-flask"></i></span>
