Dashboard quick-stats (removed - "marked in app")

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -56,7 +56,7 @@
                 <span class="info-box-icon bg-orange"><i class="ion-android-archive"></i></span>
 
                 <div class="info-box-content">
-                  <span class="info-box-text">Received EVM</span><small>(marked in app)</small>
+                  <span class="info-box-text">Received EVM</span>
                   <span class="info-box-number">{{ received_evm }}</span>
                 </div>
                 <!-- /.info-box-content -->
@@ -69,7 +69,7 @@
                 <span class="info-box-icon bg-fuchsia"><i class="ion-paper-airplane"></i></span>
 
                 <div class="info-box-content">
-                  <span class="info-box-text">Reached Polling Station</span><small>(marked in app)</small>
+                  <span class="info-box-text">Reached Polling Station</span>
                   <span class="info-box-number">{{ reached_polling_station }}</span>
                 </div>
                 <!-- /.info-box-content -->
