Presiding Officers secondary mobile and distance in meter round off to two decimal places.

--- a/templates/presidingofficerview.html
+++ b/templates/presidingofficerview.html
@@ -27,7 +27,7 @@
                 <div class="info-box-content">
                   <span class="info-box-text">Mobile</span>
                  
-                  <span class="info-box-number">{{ presiding_officer.mobile }}</span>
+                  <span class="info-box-number">{{ presiding_officer.mobile }}</span><small>{{ presiding_officer.second_mobile }}
                   
                 </div>
                 <!-- /.info-box-content -->
